# gil-cuda

./: CMakeLists.txt  conanfile.txt  main.cpp  main.cu
